# intelligent-reasoning-platform

1H8/1H8-Manager/: CMakeLists.txt  build.sh  cnrt.h  ssd_offline.h  system_check.cpp  system_check.h  task_def.h  task_main.cpp  task_requester.cpp  task_requester.h  timer.h
1H8/1H8-PS/: CMakeLists.txt  api.h  blocking_queue.cpp  blocking_queue.h  common.h  communicate.cpp  communicate.h  data_recv.cpp  data_recv.h  psTelemetry.h  task_agency.cpp  task_agency.h  task_def.h  task_main.cpp  task_readimg.cpp  task_readimg.h  task_schedule.cpp  task_schedule.h  test  test.cpp
1H8/ssd_test/: CMakeLists.txt  build.sh  run.sh
1H8/ssd_test/model/: nx.cambricon
1H8/ssd_test/src/: main.cpp  ssd_offline.cpp
intelligent_reasoning_system/: Upload.html  go.mod  go.sum  main.go
intelligent_reasoning_system/config/: DB.json  hostSet.json  model.json  path.json
intelligent_reasoning_system/demo_face/: IDevice.go  IDeviceManager.go  IImage.go  ITransFile.go  IUserMap.go  IUserMapManager.go  ilogin.go  iuser.go
intelligent_reasoning_system/demo_server/: Detection.go  Device.go  DeviceManager.go  Draw.go  Frame.go  Image.go  ImageToRecord.go  Login.go  MluResult.go  Point.go  PowerN.go  Record.go  RecordData.go  RecordToImage.go  TransFIle.go  User.go  UserMap.go  UserMapManager.go
intelligent_reasoning_system/intelligent_web/: device_manager.html  index.html  login.html  performance_monitor.html  png2jpg.py  record_query.html
intelligent_reasoning_system/intelligent_web/css/: base.css  carousel.css  index-1.css  index-2.css  performance.css
intelligent_reasoning_system/utils/: DB.go  HostSet.go  ImageMap.go  Model.go  OverDevice.go  Path.go
readPower/: CMakeLists.txt  main.c
readPower/include/: cndev.h
